# agentads

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/many_labs/: Measures_US_Version.docx
docs/: 00_your-next-customer-isnt-human.md  01_ExperimentProposal.md  01_ExperimentReport.md  02_ExperimentReport.md
experiments/: __main__.py  analysis.py  chart_susceptibility.py  config.py  db.py  demo_gemini_retry.py  demo_persuasion.py  demo_tailored_ads.py  generate_anchoring_pricing.py  generate_stimuli.py  models.py  parsing.py  plots.py  run_gemini_catchup.py  runner.py
experiments/stimuli/: __init__.py  anchoring.yaml  anchoring_new.yaml  anchoring_pricing.yaml  decoy.yaml  decoy_new.yaml  framing.yaml  framing_generalization_new.yaml  source_credibility.yaml  source_credibility_new.yaml  sunk_cost.yaml  sunk_cost_new.yaml  wording.yaml  wording_new.yaml
